--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "16.0.0-alpha.6",
-    "react-native": "0.44.2",
+    "react": "16.0.0-alpha.12",
+    "react-native": "0.49.3",
+    "react-native-blur": "^3.1.3",
     "react-native-deprecated-custom-components": "^0.1.0",
+    "react-native-experimental-navigation": "0.26.10",
+    "react-native-linear-gradient": "^2.3.0",
     "react-native-md-textinput": "^2.0.4",
     "react-native-snap-carousel": "^2.1.4",
-    "react-native-svg": "^5.1.8",
-    "react-native-swipeout": "^2.1.1",
+    "react-native-svg": "^5.1.7",
+    "react-native-swipeout": "^2.2.2",
     "react-native-vector-icons": "^4.1.1",
     "react-navigation": "^1.0.0-beta.11"
   },
