--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "appcenter": "^1.4.0",
     "react": "16.3.1",
     "react-native": "0.55.2",
     "react-native-blur": "^3.2.2",
